fixed overflow table

--- a/css/style4.css
+++ b/css/style4.css
@@ -264,6 +264,11 @@ a.article, a.article:hover {
     padding: 1%;
 }
 
+.card-tab{
+    padding: 1%;
+    overflow-x:scroll; 
+}
+
 .delete {
     color: white;
     background-color: red;
